--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,23 +4,26 @@ Version: 0.0.0.9002
 Authors@R: 
     person(given = "Alex",
            family = "Hayes",
-           role = c("aut", "cre"),
+           role = c("aut", "cre", "cph"),
            email = "alexpghayes@gmail.com",
            comment = c(ORCID = "0000-0002-4985-5160"))
 Description: Provides composable invertible transforms for
     (sparse) matrices.
 License: MIT + file LICENSE
-URL: https://github.com/RoheLab/invertiforms
+URL: https://rohelab.github.io/invertiforms, https://github.com/RoheLab/invertiforms
 BugReports: https://github.com/RoheLab/invertiforms/issues
 Depends: 
-    Matrix
+    Matrix,
+    methods
 Imports: 
-    sparseLRMatrix (>= 0.0.0.9000)
+    sparseLRMatrix (>= 0.1.0),
+    glue
 Suggests: 
     covr,
-    testthat
-Remotes: 
-    RoheLab/sparseLRMatrix
+    testthat,
+    clue,
+    igraph,
+    igraphdata
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
