Update README & some logistics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,14 @@ export(DoubleCenter)
 export(NormalizedLaplacian)
 export(PerturbedLaplacian)
 export(RegularizedLaplacian)
+export(inverse_transform)
+export(transform)
 exportClasses(DoubleCenter)
 exportClasses(NormalizedLaplacian)
 exportClasses(PerturbedLaplacian)
 exportClasses(RegularizedLaplacian)
 exportMethods(inverse_transform)
 exportMethods(transform)
+import(Matrix)
+import(methods)
 importFrom(sparseLRMatrix,sparseLRMatrix)
